# taxlation-nl

./: LICENSE  README.md  main.py  pyproject.toml
src/taxlation/nl/: __init__.py
src/taxlation/nl/atw/: __init__.py
src/taxlation/nl/atw/art_1/: README.md  __init__.py  example.py  translation.py
src/taxlation/nl/atw/art_2/: README.md  __init__.py  example.py  translation.py
src/taxlation/nl/atw/art_3/: README.md  __init__.py  translation.py
src/taxlation/nl/atw/art_4/: README.md  __init__.py  example.py  translation.py
src/taxlation/nl/awb/: __init__.py
src/taxlation/nl/awb/art_6_7/: README.md  __init__.py  example.py  translation.py
src/taxlation/nl/awb/art_6_8/: README.md  __init__.py  example.py  translation.py
src/taxlation/nl/awb/art_7_10/: README.md  __init__.py  example.py  translation.py
